--- a/src/main/resources/assets/allthearmor/lang/en_us.json
+++ b/src/main/resources/assets/allthearmor/lang/en_us.json
@@ -15,6 +15,7 @@
   "item.allthearmor.eye_armor_boots": "Eye Boots",
   "item.allthearmor.cooked_mutton_armor_leggings": "Cooked Mutton Leggings",
   "item.allthearmor.obsidian_pickaxe": "Obsidian Pickaxe",
+  "item.allthearmor.rick_roll": "Rick Roll",
   "block.allthearmor.titanium_ore": "Titanium Ore",
   "item.allthearmor.diorite_armor_chestplate": "Diorite Chestplate",
   "item.allthearmor.chicken_armor_chestplate": "Chicken Chestplate",
@@ -84,6 +85,7 @@
   "item.allthearmor.oak_armor_leggings": "Oak Leggings",
   "item.allthearmor.raw_beef_armor_chestplate": "Raw Beef Chestplate",
   "item.allthearmor.string_armor_boots": "String Boots",
+  "item.allthearmor.rick_roll.desc": "Plays the rick roll sound effect",
   "item.allthearmor.soil_armor_boots": "Soil Boots",
   "item.allthearmor.tripwire_armor_boots": "Tripwire Boots",
   "item.allthearmor.dragon_armor_chestplate": "Dragon Chestplate",
